[package]
name = "tapestry-crochet"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tapestry"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.4.18", features = ["derive"] }
image = { version = "=0.24.9", default-features = false, features = ["png","jpeg","bmp","ico","tiff"] }
anyhow = "1"
colored = "2"
